SysYParser.g4
parser grammar SysYParser;

options {
    tokenVocab = SysYLexer;
}

compUnit
    : (decl|funcDef)+ ;

decl
    : constDecl 
    | varDecl
    | exp; 


constDecl
    : CONST bType constDef (COMMA constDef)* SEMICOLON;

bType
    : INT;

constDef
    : IDENT (L_BRACKT constExp R_BRACKT)* ASSIGN constInitVal;

constInitVal
    : constExp  
    | L_BRACE (constInitVal (COMMA constInitVal)*)? R_BRACE 
    ;

varDecl
    : bType varDef (COMMA varDef)* SEMICOLON;

varDef
    : IDENT (L_BRACKT constExp R_BRACKT)* 
    | IDENT (L_BRACKT constExp R_BRACKT)* ASSIGN initVal 
    ;

initVal 
    : exp 
    | L_BRACE (initVal (COMMA initVal)*)?  R_BRACE 
    ;
            
funcDef
    : funcType funcName L_PAREN funcFparams? R_PAREN block;

funcName
    : IDENT;

funcType: VOID | INT;

funcFparams
    : funcFparam (COMMA funcFparam)*;

funcFparam
    : bType IDENT (L_BRACKT R_BRACKT(L_BRACKT exp R_BRACKT)*)?;

block
    : L_BRACE blockItem* R_BRACE;

blockItem
    : decl
    | stmt;

stmt
    : lVal ASSIGN exp SEMICOLON 
    | exp?  SEMICOLON 
    | block 
    | IF L_PAREN cond R_PAREN stmt (ELSE stmt)? 
    | WHILE L_PAREN cond R_PAREN stmt
    | BREAK SEMICOLON 
    | CONTINUE SEMICOLON 
    | RETURN exp? SEMICOLON 
    ;

exp
   : L_PAREN exp R_PAREN                    #Exp_Paren
   | lVal                         #Exp_lVal                 
   | number                       #Exp_Num
   | funcName L_PAREN funcRparams? R_PAREN #Exp_Func
   | unaryOp exp                            #Exp_Unary
   | exp (MUL | DIV | MOD) exp            #Exp_MulDivMod
   | exp (PLUS | MINUS) exp              #Exp_PlusMinus
   ;

cond
   : exp 
   | cond (LT | GT | LE | GE) cond
   | cond (EQ | NEQ) cond 
   | cond AND cond 
   | cond OR cond 
   ;

lVal
    : IDENT (L_BRACKT exp R_BRACKT)*;

number
    : INTEGER_CONST
    ;

unaryOp
    : PLUS
    | MINUS
    | NOT;

funcRparams
   : exp (COMMA exp)*
   ;

constExp
   : exp
   ;
